--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,5 @@
 become = true
 gather_facts = true
 host_key_checking = false
-inventory = inventory
+inventory = inventories
 stdout_callback = yaml
