--- a/default.config.yml
+++ b/default.config.yml
@@ -33,51 +33,132 @@ change_power_plan: true
 power_plan: "high_performance"
 
 choco_installed_packages:
-  - adobereader
-   # installs latest version of the Firefox while ignoring the package checksum
+  - name: adobereader
+    state: latest
+
+  - name: 7zip
+    state: latest
+
+  - name: advanced-ip-scanner
+    state: latest
+
+  ## installs awscli, but won't update it
+  - name: awscli
+    state: latest
+
+  - name: azure-cli
+    state: latest
+
+  - name: bitwarden
+    state: absent
+
+  - name: brave
+    state: latest
+
+  - name: caffeine
+    state: absent
+
+  - name: docker-desktop
+    state: latest
+
+  - name: firacodenf
+    state: latest
+
+    # installs latest version of the Firefox while ignoring the package checksum
   - name: Firefox
     state: latest
     choco_args: --ignorechecksum
-  - 7zip
-  - advanced-ip-scanner
-# installs awscli, but won't update it
-  # - awscli
-  - azure-cli
-  - bitwarden
-  - brave
-  # - caffeine
-  - docker-desktop
-  - firacodenf
-  - Firefox
-  - git
-  - github-desktop
-  - golang
-  - greenshot
-  - hackfont
-  - irfanview
-  #- jre8
-  - kubernetes-cli
-  - lens
-  - microsoft-windows-terminal
-  #- peazip
-  - pdk
-  - powertoys
-  - python3
-  #- sharex
-  - sops
-  - sysinternals
-  # - sumatrapdf
-  - telegram
-  - telegram.install
-  - terraform
-  - vlc
-  - vscode
-  - WhatsApp
-  - zoom
+
+  - name: git
+    state: latest
+
+  # - name: git.install
+  #   state: latest
+
+  - name: github-desktop
+    state: absent
+
+  # - name: GoogleChrome
+  #   state: latest
+
+  - name: golang
+    state: absent
+
+  - name: greenshot
+    state: latest
+
+  - name: hackfont
+    state: latest
+
+  - name: irfanview
+    state: latest
+
+  - name: jre8
+    state: absent
+
+  - name: kubernetes-cli
+    state: latest
+
+  - name: lens
+    state: latest
+
+  # - name: microsoft-windows-terminal
+  #   state: latest
+
+  - name: notion
+    state: latest
+
+  - name: peazip
+    state: absent
+
+  - name: pdk
+    state: latest
+
+  - name: powertoys
+    state: latest
+
+  - name: python3
+    state: latest
+
+  - name: sharex
+    state: absent
+
+  - name: sops
+    state: latest
+
+  - name: sysinternals
+    state: latest
+
+  - name: sumatrapdf
+    state: absent
+
+  - name: telegram
+    state: absent
+
+  - name: telegram.install
+    state: absent
+
+  - name: terraform
+    state: absent
+
+  - name: vlc
+    state: latest
+
+  - name: vscode
+    state: latest
+
+  - name: WhatsApp
+    state: latest
+    choco_args: --ignorechecksum
+
+  - name: zoom
+    state: latest
 
 winget_packages:
-  # - name: "Auto Dark Mode"
-  #   source: winget
+
+  - name: "Auto Dark Mode"
+    source: winget
+
   - name: WinDynamicDesktop
     source: winget
 
@@ -105,7 +186,7 @@ windows_features:
 # wsl-ubuntu-1804
 # wsl-ubuntu-2004
 install_wsl2: true
-wsl2_distribution: wsl-ubuntu-2004
+wsl2_distribution: wsl-ubuntu-2204
 
 remove_bloatware: true
 bloatware:
